Responsive and errors (visibility issue) rectified!

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ body{
     text-align: center;
     margin: 20px;
     font-size: 5em;
+    visibility: hidden;
 }
 .box2{
    
